--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
-#login-conatiner{
+/* #login-conatiner{
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     height: 90vh;
     border: 5px solid black;
-    /* background-color: red; */
-    /* margin: 50px; */
-}
+    margin: 50px;
+} */
 input{
     padding: 15px 70px ;
     border-radius: 2px;
