--- a/project/style.css
+++ b/project/style.css
@@ -30,15 +30,7 @@ button{
     gap: 20px;
 
 }
-#auth_container{
-    height: 100%;
-    /* background-color: black; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 30px;
 
-}
 #login-conatiner{
     /* gap: 40px; */
 }
@@ -49,12 +41,32 @@ button{
 .signUpstyle{
     margin-left: 45px;
 }
-#signin_container{
+.cards{
+    background-color: red;
+}
+.postWrapper{
+    background-color: rgb(219, 215, 215);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
     height: 100%;
-    /* background-color: black; */
+    padding: 10px;
+}
+#inputFile{
+    display: none;
+}
+.postContainer{
     display: flex;
     justify-content: center;
+}
+#labelFile{
+    background-color: #824672;
+    display: flex;
     align-items: center;
-    column-gap: 30px;
-
+    color: #fff;
+    padding: 0 4px;
+}
+.card{
+    margin-top: 20px;
 }
