--- a/project/login/login.css
+++ b/project/login/login.css
@@ -1,12 +1,20 @@
 #signin_container{
-    height: 100%;
+    height: 100vh;
     /* background-color: black; */
     display: flex;
     justify-content: center;
     align-items: center;
     column-gap: 30px;
+    padding: 10px;
 
 }
+#signin_container2{
+    border: 1px solid black;
+    padding: 20px;
+    border-radius: 15px;
+    /* box-shadow: rgb(31, 73, 116); */
+}
+
 .accountWrapper{
     display: flex;
     gap: 10px;
@@ -23,6 +31,6 @@ button{
     background-color: green;
     color: white;
     padding: 13px 50px ;
-    border-radius: 3px;
+    border-radius: 30px;
     gap: 20px;
 }
